# shikimori-animego-merge-list

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
shikimori-animego-merge-list/: __init__.py  main.py  shikimori_animego_merge_list.py
shikimori-animego-merge-list/animego/: __init__.py  animego.py
shikimori-animego-merge-list/converter/: converter.py
shikimori-animego-merge-list/seleniumWrap/: seleniumWrap.py
shikimori-animego-merge-list/shikimori/: __init__.py  shikimori.py
shikimori-animego-merge-list/utility/: __init__.py  animeItem.py  json.py  jsonWrap.py  toShikimori.py
src/shikimori-animego-merge-list/: __init__.py
src/shikimori-animego-merge-list/animego/: __init__.py  animego.py
src/shikimori-animego-merge-list/converter/: converter.py
src/shikimori-animego-merge-list/seleniumWrap/: __init__.py
src/shikimori-animego-merge-list/shikimori/: __init__.py  shikimori.py
src/shikimori-animego-merge-list/utility/: __init__.py  animeItem.py
